CSS updated for browse page to fix some clipping

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,46 +34,3 @@ body {
   grid-row: 2 / 3;
   grid-column: 1 / -1;
 }
-
-.level-container {
-  border: 2px solid #c4fff9;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 2em;
-  background-color: rgba(7, 190, 184, 0.2);
-  max-width: 70%;
-  animation: fadeIn ease-in-out 0.25s;
-}
-
-.level-container > * {
-  margin: 1em;
-}
-
-@media screen and (max-width: 950px) {
-  .level-container {
-    flex-direction: column;
-    margin-top: 6em;
-    padding: 1em 2em;
-  }
-
-  .level-container .container {
-    order: -1;
-  }
-}
-
-@media screen and (max-width: 412px) {
-  .level-container {
-    margin-top: 6em;
-    padding: 1em 2em;
-  }
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
